# rose

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  checker_pattern.c  draw_circle.c  draw_line.c  fill_circle.c  fill_rect.c
include/: rose.h
src/: rose.c
